--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,17 @@ $black: #000000;
 $black-AH: #3b3b3b;
 $white: #F7F7F9;
 
+::ng-deep .tooltip-inner {
+    background-color: $white;
+    color: $black;
+}
+
+::ng-deep .tooltip-arrow {
+    fill: $white;
+    background-color: $white;
+    color: $white;
+}
+
 .header-mobile {
     position: fixed;
     width: 100%;
@@ -42,7 +53,7 @@ $white: #F7F7F9;
     padding: 7px;
 }
 
-.connect-wallet-button {
+.ah-modal-button {
     white-space: nowrap;
     max-width: 140px;                   /* IE6 needs any width */
     overflow: hidden;              /* "overflow" value must be different from  visible"*/ 
@@ -182,23 +193,34 @@ $white: #F7F7F9;
     }
 }
 
-.presale--wrapper {
-    background: linear-gradient(rgb(30 30 30), rgb(67 67 67 / 25%));
-    width: 700px;
-
-    &_text {
-        text-align: center;
-
-        p {
-            color: $grey-text;
+.presale {
+    padding: 3rem;
+    
+    &--wrapper {
+        background: linear-gradient(rgb(30 30 30), rgb(67 67 67 / 25%));
+        width: 700px;
+    
+        &_text {
+            text-align: center;
+    
+            p {
+                color: $grey-text;
+            }
+    
+            a {
+                color: $grey-text;
+                font-size: 14px;
+                cursor: pointer;
+            }
+        }
+    
+        &_account {
+            display: flex;
+            justify-content: space-around;
         }
     }
-
-    &_account {
-        display: flex;
-        justify-content: space-around;
-    }
 }
+
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -232,6 +254,7 @@ input[type=number] {
         justify-content: center;
         align-items: center;
         padding: 0 0.5rem;
+        min-width: 90px;
     }
 
     &_icon {
@@ -464,7 +487,7 @@ input[type=number] {
     margin-top: 1rem;
 }
 
-.connect-wallet {
+.ah-modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -478,7 +501,7 @@ input[type=number] {
         top: calc(50% - 61px);
         left: calc(50% - 250px);
         width: 500px;
-        height: 200px;
+        height: 230px;
         background-color: $black-AH;
         justify-content: center;
         text-align: center;
@@ -497,6 +520,25 @@ input[type=number] {
             align-items: center;
         }
 
+        &_text {
+            font-size: 14px;
+            color: $grey-text;
+        }
+
+        &_input {
+            border-radius: 5px;
+            background-color: $black-AH;
+            width: 350px;
+            padding: 0.375rem 0.75rem;
+            color: $white;
+            border: 1px solid $white;
+
+            &:visited, &:active, &:focus, &:focus-visible, &:hover  {
+                background-color: $white;
+                color: #212529;
+            }
+        }
+
         .main-btn {
             width: 350px;
             display: flex;
@@ -512,6 +554,12 @@ input[type=number] {
         .logOut {
             justify-content: center;
         }
+    }
+
+    &--warning {
+        margin: 0;
+        font-size: 12px;
+        color: #df5353;
     }
 }
 
@@ -615,6 +663,7 @@ input[type=number] {
     width: 100%;
     height: 100vh;
     align-items: center;
+    z-index: 99999;
 }
 
 // For tables and mobile screens
@@ -637,7 +686,7 @@ input[type=number] {
         display: block;
     }
 
-    .navigation--connect-wallet {
+    .navigation--ah-modal {
         padding-right: 16px;
     }
 
@@ -695,6 +744,12 @@ input[type=number] {
 @media (min-width: 565px) {
     .left-0 {
         left: 0;
+    }
+}
+
+@media (max-width: 430px) {
+    .presale {
+        padding: 1rem;
     }
 }
 
