Presale modal style fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -523,6 +523,7 @@ input[type=number] {
         &_text {
             font-size: 14px;
             color: $grey-text;
+            width: 320px;
         }
 
         &_input {
