--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,6 +22,10 @@ $white: #F7F7F9;
     bottom: 115px !important;
 }
 
+.w-500 {
+    max-width: 500px;
+}
+
 .white-color {
     color: $white;
 }
@@ -225,6 +229,29 @@ $white: #F7F7F9;
                 cursor: pointer;
             }
         }
+    }
+}
+
+.wallet {
+    padding: 3rem;
+
+    &--wrapper {
+        background: linear-gradient(rgb(30 30 30), rgb(67 67 67 / 25%));
+        width: 700px;
+    
+        &_text {
+            text-align: center;
+    
+            p {
+                color: $grey-text;
+            }
+    
+            a {
+                color: $grey-text;
+                font-size: 14px;
+                cursor: pointer;
+            }
+        }
     
         &_account {
             display: flex;
@@ -275,10 +302,14 @@ input[type=number] {
         border-radius: 5px;
         margin: 0 0.5rem;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         padding: 0 0.5rem;
         min-width: 90px;
+
+        &-image {
+            padding-right: 4px;
+        }
     }
 
     &_icon {
@@ -298,6 +329,13 @@ input[type=number] {
     &_label {
         font-size: 12px;
         color: $grey-text;
+    }
+
+    &_loading {
+        position: absolute;
+        z-index: 99999;
+        right: 50px;
+        bottom: -11px;
     }
 }
 
@@ -724,7 +762,7 @@ input[type=number] {
         display: none;
     }
 
-    .presale--table {
+    .wallet--table {
         width: 550px;
     }
 }
@@ -758,11 +796,11 @@ input[type=number] {
         position: relative;
     }
 
-    .presale--wrapper_account {
+    .wallet--wrapper_account {
         display: block;
     }
 
-    .presale--table {
+    .wallet--table {
         width: 100%;
     }
 }
@@ -774,7 +812,7 @@ input[type=number] {
 }
 
 @media (max-width: 430px) {
-    .presale {
+    .presale, .wallet {
         padding: 1rem;
     }
 }
@@ -788,7 +826,7 @@ input[type=number] {
         width: 20px;
     }
 
-    .presale--wrapper_text {
+    .presale--wrapper_text, .wallet--wrapper_text {
         font-size: 12px;
     }
 }
