Update disclaimer to open in separate window

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -195,7 +195,7 @@
       </div>
       <div class="d-flex justify-content-start align-items-center mt-2">
         <input type="checkbox" name="check-disclaimer" id="check-disclaimer" [formControl]="disclaimerCheckbox">
-        <label for="check-disclaimer" class="presale--form_label pl-2">I acknowledge that I understand terms, conditions, risks and limitations outlined in the <a href="https://lightpaper.alphahuntsman.com/">lightpaper</a></label>
+        <label for="check-disclaimer" class="presale--form_label pl-2">I acknowledge that I understand terms, conditions, risks and limitations outlined in the <a href="https://lightpaper.alphahuntsman.com/" target="_blank">lightpaper</a></label>
       </div>
     </div>
     <div class="d-flex justify-content-center pt-5">
