--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,55 +1,66 @@
+<div class="header-notification" #notification>
+  <div class="header-notification--text">
+    Token presale is live, don't miss the chance!
+  </div>
+  <div>
+    <button type="button" class="header-notification--button" (click)="scroll(deposit)">Reserve now!</button>
+  </div>
+</div>
 <div class="navigation--glow" #home>
 </div>
-<header class="header-mobile" id="header-mobile" [@mobile-navigation]="expanded ? 'show' : 'hide'">
-  <div class="container py-3">
-      <div class="row justify-content-between">
-          <div class="col-lg-2 navigation--logo">
-              <a href="/">
-                  <img src="../assets/images/logo.webp" alt="Alpha Huntsman logo" class="logo-image">
-              </a>
-          </div>
-          <div class="col-lg-10 d-flex justify-content-end">
-              <ul class="nav justify-content-end navigation--menu">
-                  <li class="nav-item active">
-                    <a class="nav-link" (click)="scroll(home)">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" (click)="scroll(goal)">Presale</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" (click)="scroll(token)">Token</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" (click)="scroll(roadmap)">Roadmap</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" (click)="scroll(about)">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" (click)="scroll(MVP)">MVP</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" (click)="scroll(news)">News</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" (click)="scroll(team)">Team</a>
-                  </li>
-                  <!-- <li class="nav-item">
-                    <a class="nav-link" (click)="scroll(waitlist)">Waitlist</a>
-                  </li> -->
-                  <li class="nav-item">
-                    <div class="navigation--ah-modal">
-                      <button type="button" class="btn btn-outline-light ah-modal-button" (click)="openConnectWalletModal($event)">{{ account ? account : 'Connect Wallet' }}</button>
-                    </div>
-                  </li>
-              </ul>
-              <div class="navigation--hamburger" (click)="toggleMeniu()">
-                <i data-feather="menu"></i>
-              </div>
-          </div>
-      </div>
-  </div>
-</header>
+<!-- <div id="header-wrapper" class="header-wrapper"> -->
+<!-- Header -->
+  <header class="header-mobile" id="header-mobile" [@mobile-navigation]="expanded ? 'show' : 'hide'">
+    <div class="container py-3">
+        <div class="row justify-content-between">
+            <div class="col-lg-2 navigation--logo">
+                <a href="/">
+                    <img src="../assets/images/logo.webp" alt="Alpha Huntsman logo" class="logo-image">
+                </a>
+            </div>
+            <div class="col-lg-10 d-flex justify-content-end">
+                <ul class="nav justify-content-end navigation--menu">
+                    <li class="nav-item active">
+                      <a class="nav-link" (click)="scroll(home)">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" (click)="scroll(goal)">Presale</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" (click)="scroll(token)">Token</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" (click)="scroll(roadmap)">Roadmap</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" (click)="scroll(about)">About</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" (click)="scroll(MVP)">MVP</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" (click)="scroll(news)">News</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" (click)="scroll(team)">Team</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                      <a class="nav-link" (click)="scroll(waitlist)">Waitlist</a>
+                    </li> -->
+                    <li class="nav-item">
+                      <div class="navigation--ah-modal">
+                        <button type="button" class="btn btn-outline-light ah-modal-button" (click)="openConnectWalletModal($event)">{{ account ? account : 'Connect Wallet' }}</button>
+                      </div>
+                    </li>
+                </ul>
+                <div class="navigation--hamburger" (click)="toggleMeniu()">
+                  <i data-feather="menu"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+  </header>
+<!-- </div> -->
 <div class="home--wrapper">
     <div class="container pt-5" id="main" @slide-in>
         <div class="row p-5 justify-content-center">
@@ -120,7 +131,7 @@
   </div>
 </div>
 <!-- Token deposit -->
-<div class="container presale d-flex justify-content-center">
+<div class="container presale d-flex justify-content-center" #deposit>
   <div class="presale--wrapper py-5">
     <div class="presale--wrapper_text mb-4">
       <h1>Deposit</h1>
